--- a/Rovema.App/_Imports.razor
+++ b/Rovema.App/_Imports.razor
@@ -9,6 +9,7 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
+@using MudBlazor
 @using Dclt.Directus
 @using Rovema.App
 @using Rovema.App.Layout
