--- a/Rovema.App/Pages/Login.razor
+++ b/Rovema.App/Pages/Login.razor
@@ -17,8 +17,14 @@
 
 <MudPaper Class="d-flex" Height="100vh">
     <MudPaper Class="d-flex flex-column rounded-0 pa-12" Elevation="0" Width="500px">
-        <MudPaper Class="mud-theme-secondary pb-16" Width="100%" Height="100px">
-            Romema PME
+        <MudPaper Class="pb-16 d-flex flex-row" Width="100%" Height="84px">
+            <MudPaper Class="pa-2" Width="80px" Height="80px" Elevation="0">
+                <MudImage Src="images/icon512.png" Alt="Rovema Logo" Elevation="0" Class="rounded-lg" ObjectFit="ObjectFit.Fill" Fluid/>
+            </MudPaper>
+            <MudPaper Class="flex-grow-1 pa-4" Height="80px" Elevation="0">
+                <MudText Typo="Typo.h6"> Rovema PME</MudText>
+                <MudText Typo="Typo.body1" Color="Color.Success"> Dashboard de Monitoramento</MudText>
+            </MudPaper>
         </MudPaper>
         <MudText Typo="Typo.h3" Class="pt-16 mb-2">Credenciais</MudText>
         <MudForm @ref="form" Model="@loginModel">
