--- a/Rovema.App/Pages/Login.razor
+++ b/Rovema.App/Pages/Login.razor
@@ -20,7 +20,7 @@
         <MudForm @ref="form" Model="@loginModel">
             <MudTextField @bind-Value="loginModel.Email" Label="Email" Required="true" Variant="Variant.Outlined" Class="my-4" />
             <MudTextField @bind-Value="loginModel.Password" Label="Senha" InputType="InputType.Password" Required="true" Variant="Variant.Outlined" Class="my-4" />
-            <MudButton @ref="login" Variant="Variant.Filled" Size="Size.Large" Color="Color.Success" OnClick="DoLogin" Class="my-4"
+            <MudButton Variant="Variant.Filled" Size="Size.Large" Color="Color.Success" OnClick="DoLogin" Class="my-4" Disabled="@disabled"
                        Style="width: 200px; height: 60px;">Entrar
             </MudButton>
         </MudForm>
@@ -32,7 +32,7 @@
 @code {
     private MudForm? form;
     private LoginModel loginModel = new();
-    private MudButton? login;
+    private bool disabled = false;
 
     private async Task DoLogin()
     {
@@ -40,11 +40,11 @@
         {
             if (!string.IsNullOrEmpty(loginModel.Email) && !string.IsNullOrEmpty(loginModel.Password))
             {
-                login.Disabled = true;
+                disabled = true;
                 var auth = await Auth.LoginAsync(loginModel.Email, loginModel.Password);
                 if (auth) 
                     Navigation.NavigateTo("/");
-                login.Disabled = false;
+                disabled = false;
             }
         }
     }
