--- a/Rovema.App/Pages/Login.razor
+++ b/Rovema.App/Pages/Login.razor
@@ -9,7 +9,7 @@
     <MudPaper Class="d-flex flex-column rounded-0 pa-12" Elevation="0" Width="500px">
         <MudPaper Class="pb-16 d-flex flex-row" Width="100%" Height="84px" Elevation="5">
             <MudPaper Class="pa-2" Width="80px" Height="80px" Elevation="0">
-                <MudImage Src="images/icon512.png" Alt="Rovema Logo" Elevation="0" Class="rounded-lg" ObjectFit="ObjectFit.Fill" Fluid/>
+                <MudImage Src="icon-192.png" Alt="Rovema Logo" Elevation="0" Class="rounded-lg" ObjectFit="ObjectFit.Fill" Fluid/>
             </MudPaper>
             <MudPaper Class="flex-grow-1 pa-3" Height="80px" Elevation="0">
                 <MudText Typo="Typo.h6"> Rovema PME</MudText>
