--- a/Rovema.App/Pages/Home.razor
+++ b/Rovema.App/Pages/Home.razor
@@ -1,10 +1,10 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Início</PageTitle>
 
 
-<MudText Typo="Typo.h3" GutterBottom="true">Hello, world!</MudText>
-<MudText Class="mb-8">Welcome to your new app, powered by MudBlazor and the .NET 8 Template!</MudText>
+<MudText Typo="Typo.h3" GutterBottom="true">Alô mundo</MudText>
+<MudText Class="mb-8">Bem vindo ao MudBlazor</MudText>
 
 <MudAlert Severity="Severity.Normal">
     You can find documentation and examples on our website here:
