--- a/Rovema.App/_Imports.razor
+++ b/Rovema.App/_Imports.razor
@@ -11,5 +11,11 @@
 @using Microsoft.JSInterop
 @using MudBlazor
 @using Dclt.Directus
+@using Rovema.Shared.Models
+@using Rovema.Shared.Extensions
 @using Rovema.App
 @using Rovema.App.Layout
+@using Rovema.App.Helpers
+@using Rovema.App.Components
+
+
