--- a/Rovema.App/Layout/MainLayout.razor
+++ b/Rovema.App/Layout/MainLayout.razor
@@ -37,7 +37,7 @@
 </AuthorizeView>
 
 @code {
-    private bool _isNavOpen = true;
+    private bool _isNavOpen = false;
     private bool _isDarkMode = true;
     private MudTheme? _theme = null;
 
