--- a/Rovema.App/Pages/Home.razor
+++ b/Rovema.App/Pages/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @inject DirectusService directus
 
-<PageTitle>Início</PageTitle>
+<PageTitle>RPA - Monitoramento</PageTitle>
 
 @if (rpas == null)
 {
